Use `List.of()`