@@ -64,63 +64,63 @@ class TARDISChameleonTemplateGUI {
         ItemStack one = new ItemStack(Material.BOWL, 1);
         ItemMeta oe = one.getItemMeta();
         oe.setDisplayName("1");
-        oe.setLore(Collections.singletonList(plugin.getChameleonGuis().getString("COL_L_FRONT")));
+        oe.setLore(List.of(plugin.getChameleonGuis().getString("COL_L_FRONT")));
         oe.setCustomModelData(GUIChameleonTemplate.COL_L_FRONT.getCustomModelData());
         one.setItemMeta(oe);
         // two
         ItemStack two = new ItemStack(Material.BOWL, 1);
         ItemMeta to = two.getItemMeta();
         to.setDisplayName("2");
-        to.setLore(Collections.singletonList(plugin.getChameleonGuis().getString("COL_L_MIDDLE")));
+        to.setLore(List.of(plugin.getChameleonGuis().getString("COL_L_MIDDLE")));
         to.setCustomModelData(GUIChameleonTemplate.COL_L_MIDDLE.getCustomModelData());
         two.setItemMeta(to);
         // three
         ItemStack three = new ItemStack(Material.BOWL, 1);
         ItemMeta te = three.getItemMeta();
         te.setDisplayName("3");
-        te.setLore(Collections.singletonList(plugin.getChameleonGuis().getString("COL_L_BACK")));
+        te.setLore(List.of(plugin.getChameleonGuis().getString("COL_L_BACK")));
         te.setCustomModelData(GUIChameleonTemplate.COL_L_BACK.getCustomModelData());
         three.setItemMeta(te);
         // four
         ItemStack four = new ItemStack(Material.BOWL, 1);
         ItemMeta fr = four.getItemMeta();
         fr.setDisplayName("4");
-        fr.setLore(Collections.singletonList(plugin.getChameleonGuis().getString("COL_B_MIDDLE")));
+        fr.setLore(List.of(plugin.getChameleonGuis().getString("COL_B_MIDDLE")));
         fr.setCustomModelData(GUIChameleonTemplate.COL_B_MIDDLE.getCustomModelData());
         four.setItemMeta(fr);
         // five
         ItemStack five = new ItemStack(Material.BOWL, 1);
         ItemMeta fe = five.getItemMeta();
         fe.setDisplayName("5");
-        fe.setLore(Collections.singletonList(plugin.getChameleonGuis().getString("COL_R_BACK")));
+        fe.setLore(List.of(plugin.getChameleonGuis().getString("COL_R_BACK")));
         fe.setCustomModelData(GUIChameleonTemplate.COL_R_BACK.getCustomModelData());
         five.setItemMeta(fe);
         // six
         ItemStack six = new ItemStack(Material.BOWL, 1);
         ItemMeta sx = six.getItemMeta();
         sx.setDisplayName("6");
-        sx.setLore(Collections.singletonList(plugin.getChameleonGuis().getString("COL_R_MIDDLE")));
+        sx.setLore(List.of(plugin.getChameleonGuis().getString("COL_R_MIDDLE")));
         sx.setCustomModelData(GUIChameleonTemplate.COL_R_MIDDLE.getCustomModelData());
         six.setItemMeta(sx);
         // seven
         ItemStack seven = new ItemStack(Material.BOWL, 1);
         ItemMeta sn = seven.getItemMeta();
         sn.setDisplayName("7");
-        sn.setLore(Collections.singletonList(plugin.getChameleonGuis().getString("COL_R_FRONT")));
+        sn.setLore(List.of(plugin.getChameleonGuis().getString("COL_R_FRONT")));
         sn.setCustomModelData(GUIChameleonTemplate.COL_R_FRONT.getCustomModelData());
         seven.setItemMeta(sn);
         // eight
         ItemStack eight = new ItemStack(Material.BOWL, 1);
         ItemMeta et = eight.getItemMeta();
         et.setDisplayName("8");
-        et.setLore(Collections.singletonList(plugin.getChameleonGuis().getString("COL_F_MIDDLE")));
+        et.setLore(List.of(plugin.getChameleonGuis().getString("COL_F_MIDDLE")));
         et.setCustomModelData(GUIChameleonTemplate.COL_F_MIDDLE.getCustomModelData());
         eight.setItemMeta(et);
         // nine
         ItemStack nine = new ItemStack(Material.BOWL, 1);
         ItemMeta ne = nine.getItemMeta();
         ne.setDisplayName("9");
-        ne.setLore(Collections.singletonList(plugin.getChameleonGuis().getString("COL_C_LAMP")));
+        ne.setLore(List.of(plugin.getChameleonGuis().getString("COL_C_LAMP")));
         ne.setCustomModelData(GUIChameleonTemplate.COL_C_LAMP.getCustomModelData());
         nine.setItemMeta(ne);
         // redstone lamp
