@@ -320,13 +320,13 @@ public class TARDISRecipeCommands implements CommandExecutor {
         ItemStack in_wall = new ItemStack(Material.ORANGE_WOOL, 1);
         ItemMeta in_meta = in_wall.getItemMeta();
         in_meta.setDisplayName("Interior walls");
-        in_meta.setLore(Collections.singletonList("Any valid Wall/Floor block"));
+        in_meta.setLore(List.of("Any valid Wall/Floor block"));
         in_wall.setItemMeta(in_meta);
         // interior floor
         ItemStack in_floor = new ItemStack(Material.LIGHT_GRAY_WOOL, 1);
         ItemMeta fl_meta = in_floor.getItemMeta();
         fl_meta.setDisplayName("Interior floors");
-        fl_meta.setLore(Collections.singletonList("Any valid Wall/Floor block"));
+        fl_meta.setLore(List.of("Any valid Wall/Floor block"));
         in_floor.setItemMeta(fl_meta);
         // seed block
         ItemStack block = new ItemStack(t.get(type), 1);
