@@ -77,7 +77,7 @@ public class TARDISConfigMenuInventory {
                     cmd += 100; // xx -> 1xx
                 }
                 im.setCustomModelData(cmd);
-                im.setLore(Collections.singletonList(value));
+                im.setLore(List.of(value));
                 is.setItemMeta(im);
                 options.add(is);
             }
